Corrige tests y adapta CreateFunkoDTO para la categoría